# widgitron

./: CHANGELOG.md  README.md  TESTING_STANDARDS.md  package.json
src/: App.tsx  constants.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: antigravity.rs  arxiv.rs  commands.rs  config_store.rs  deadlines.rs  desktop.rs  gpu.rs  lib.rs  logger.rs  models.rs  ota.rs  quota.rs  secrets.rs  utils.rs  vscode_secrets.rs
src/components/: CopyButton.tsx  DeadlineCountdown.tsx  MasterSwitch.tsx  SidebarLink.tsx  StatCard.tsx  WidgetPreviewCard.tsx  WindowButton.tsx
src/settings/: SettingsPanel.tsx  ThemeManagementSection.tsx
src/types/: config.ts  theme.ts
src/utils/: arxivKeywords.ts  color.ts
src/widgets/: ArxivWidgetContent.tsx  DeadlineWidgetContent.tsx  GPUWidgetContent.tsx  QuotaWidgetContent.tsx
